fix: z-index 999 on notifs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -163,6 +163,7 @@ a.white-text {
   position: fixed;
   bottom: 1rem;
   left: 0.5rem;
+  z-index: 999;
 }
 
 .text-justify {
